add cov plots with no highlighting; add multiqc report

--- a/nextflow.config
+++ b/nextflow.config
@@ -57,6 +57,9 @@ profiles {
   slurm {
     includeConfig 'conf/slurm.config'
   }
+  test {
+    includeConfig 'conf/test.config'
+  }
 }
 
 // Capture exit codes from upstream processes when piping
